adapt for java 1.8