@@ -10,6 +10,7 @@ import org.jetbrains.annotations.Nullable;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -71,7 +72,7 @@ public class WinPtyProcess extends PtyProcess {
                           boolean consoleMode,
                           boolean enableAnsiColor) throws IOException {
         myConsoleMode = consoleMode;
-        myCommand = List.of(command);
+        myCommand = Arrays.asList(command);
         try {
             myWinPty = new WinPty(joinCmdArgs(command), workingDirectory, environment, consoleMode,
                                   initialColumns, initialRows, enableAnsiColor);
